<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="home_title">Characters</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>

    <string name="first_location">First seen in:</string>
    <string name="last_location">Last known location:</string>
    <string name="specie">Specie:</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="back">Back</string>
    <string name="information">Information</string>
    <string name="creation_date">Creation date:</string>
    <string name="type">Type:</string>
    <string name="origin">Origin:</string>
</resources>
