<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <include
        android:id="@+id/progress_bar_view"
        layout="@layout/loading_progressbar"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/home_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent" />

    <view
        android:id="@+id/divider"
        android:layout_height="2dp"
        android:layout_width="match_parent"
        class="com.google.android.material.divider.MaterialDivider"
        app:layout_constraintTop_toBottomOf="@id/tv_title"/>

    <include
        android:id="@+id/error_view"
        layout="@layout/error_view"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/divider"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_previous_page"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_next_page"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_characters"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_previous_page"
        tools:listitem="@layout/item_character"/>

</androidx.constraintlayout.widget.ConstraintLayout>
