<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/progress_bar_view"
        layout="@layout/loading_progressbar"
        android:visibility="gone" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:navigationIcon="?attr/actionModeCloseDrawable"
        app:navigationIconTint="@color/white"
        app:title="@string/information"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_character"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/home_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_character"
                tools:text="Nombre" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_name">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/tv_label_creation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/creation_date"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_creation_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_creation_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_creation_date"
                    tools:text="2017-11-04" />

                <TextView
                    android:id="@+id/tv_label_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/status"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_creation_date" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_status"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_status"
                    tools:text="Alive" />

                <TextView
                    android:id="@+id/tv_label_species"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/specie"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_status" />

                <TextView
                    android:id="@+id/tv_species"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_species"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_species"
                    tools:text="Human" />

                <TextView
                    android:id="@+id/tv_label_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/type"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_species" />

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_type"
                    tools:text="N/A" />

                <TextView
                    android:id="@+id/tv_label_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/gender"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_type" />

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_gender"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_gender"
                    tools:text="Male" />

                <TextView
                    android:id="@+id/tv_label_origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/origin"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_gender" />

                <TextView
                    android:id="@+id/tv_origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_origin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_origin"
                    tools:text="C-137" />

                <TextView
                    android:id="@+id/tv_label_last_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/last_location"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_origin" />

                <TextView
                    android:id="@+id/tv_last_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_label_last_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="@id/tv_label_last_location"
                    tools:text="Citadel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
